force-app/main/default/objects/PoliticaDescuento__c/PoliticaDescuento__c.object-meta.xml
<CustomObject>
    <label>Política de descuento</label>
    <nameField>
        <label>Nombre de Política de descuento</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Politicas de descuento</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>