force-app/main/default/objects/PoliticaDescuento__c/fields/Canaldistribucion__c.field-meta.xml
<CustomField>
    <fullName>Canaldistribucion__c</fullName>
    <label>Canal de distribución</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CanalDistribucion</valueSetName>
    </valueSet>
</CustomField>