force-app/main/default/objects/PoliticaDescuento__c/fields/Descuento__c.field-meta.xml
<CustomField>
    <fullName>Descuento__c</fullName>
    <inlineHelpText>Este valor calcula el descuento para la política</inlineHelpText>
    <label>Descuento</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>