force-app/main/default/objects/PoliticaDescuento__c/fields/Grupo_de_cliente_del__c.field-meta.xml
<CustomField>
    <fullName>Grupo_de_cliente_del__c</fullName>
    <label>Grupo de cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Grupo_de_Cliente</valueSetName>
    </valueSet>
</CustomField>