force-app/main/default/objects/PoliticaDescuento__c/fields/GrupoProducto__c.field-meta.xml
<CustomField>
    <fullName>GrupoProducto__c</fullName>
    <label>Grupo de materiales</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Grupo_de_materiales</valueSetName>
    </valueSet>
</CustomField>