force-app/main/default/objects/PoliticaDescuento__c/listViews/Todas_las_politicas.listView-meta.xml
<ListView>
    <fullName>Todas_las_politicas</fullName>
    <columns>NAME</columns>
    <columns>Grupo_de_cliente_del__c</columns>
    <columns>GrupoProducto__c</columns>
    <columns>Descuento__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todas las politicas</label>
    <sharedTo>
        <role>Data_Master</role>
    </sharedTo>
</ListView>